<resources>
    <string name="app_name">SimonSays</string>
    <string name="start">start</string>


    <string-array name="list_entries">
        <item>Easy</item>
        <item>Intermediate</item>
        <item>Hurd</item>
        <item>Expert</item>
    </string-array>

    <string-array name="list_values">
        <item>2</item>
        <item>3</item>
        <item>4</item>
<!--        <item>5</item>-->
    </string-array>

    <string-array name="robot_sound_effects">
        <item>scifi_robot_speaking</item>
        <item>scifi_artificial_intelligence_speaks</item>
        <item>science_fiction_computer_voice</item>
        <item>scifi_robot_says_no</item>
        <item>robotic_voices</item>
        <item>robot_says_yes</item>
        <item>boy_says_volcano</item>
    </string-array>

    <string-array name="instrumental_sound_effects">
        <item>trumpets_and_strings_off_beat</item>
        <item>orchestral_violin_treble_note</item>
        <item>orchestral_violin_jingle</item>
        <item>musical_flute_alert</item>
        <item>musical_alert_notification</item>
        <item>hand_tribal_drum</item>
        <item>guitar_notification_alert</item>
        <item>flute_mobile_phone_notification_alert</item>
        <item>fail_drum_and_bells</item>
        <item>electric_guitar_distorte_slide</item>
        <item>drum_bass_hit</item>
        <item>cool_guitar_riff_</item>
    </string-array>

    <string-array name="hitech_sound_effects">
        <item>technological_futuristic_hum</item>
        <item>tech_click</item>
        <item>synthetic_scifi_wobble</item>
        <item>sci-synth_glitchy_rhythm</item>
        <item>spell_waves</item>
        <item>space_shot_whoosh</item>
        <item>small_electric_glitch</item>
        <item>scifi_drill_alert</item>
        <item>scifi_click</item>
        <item>game_interface_sound</item>
        <item>futuristic_cinematic_sweep</item>
    </string-array>

    <string-array name="hit_sound_effects">
        <item>tribal_dry_drum</item>
        <item>steam_powered_mech_suit_activate</item>
        <item>soft_horror_hit_drum</item>
        <item>metal_tool_falling</item>
        <item>metal_bowl_hit</item>
        <item>deep_dark_horror_drum</item>
        <item>axe_hits_to_a_plate</item>
        <item>alien_blast_in_the_earth</item>
    </string-array>

    <string-array name="arcade_sound_effects">
        <item>retro_game_notification</item>
        <item>lightning_whip</item>
        <item>funny_system_break_down</item>
        <item>funny_cartoon_fast_splat</item>
        <item>fantasy_sword_slide</item>
        <item>electric_buzz_glitch</item>
        <item>cartoon_fart_triple</item>
        <item>cartoon_fart_triple</item>
        <item>cartoon_fart_sound</item>
        <item>cartoon_fart_or_splat</item>
        <item>arcade_retro_game_over</item>
    </string-array>

    <string-array name="animels_sound_effects">
        <item>toy_whistler_bird_sound</item>
        <item>sweet_kitty_meow</item>
        <item>sick_man_sneeze</item>
        <item>sheep_sounds</item>
        <item>quick_insect_buzz</item>
        <item>little_bird_calling_chirp</item>
        <item>female_astonished_gasp</item>
        <item>farm_pig_short_grunt</item>
        <item>cow_dry_moo</item>
        <item>cartoon_insect_long_buzz</item>
        <item>cartoon_insect_complain</item>
        <item>big_bee_hard_flying_sound</item>
        <item>angry_cartoon_kitty_meow</item>
        <item>aggressive_beas_troar</item>
    </string-array>

    <string-array name="alian_sound_effects">
        <item>nasty_criature_roar</item>
    </string-array>

    <string-array name="alarm_sound_effects">
        <item>wrong_answer_bass_buzzer</item>
        <item>scifi_robot</item>
        <item>electric_fence_buzzing</item>
        <item>alarm_tone</item>
    </string-array>

    <string name="game_name" translatable="false">₱₴Ɏ₵ⱧØ ₴ł₥Ø₦</string>
    <string name="game_name_preview">TᖇY TO ᗰᗩIᑎTᗩIᑎ ᔕᗩᑎIT</string>
    <string name="play_btn">ⱠɆ₮ ₮ⱧɆ ₲₳₥Ɇ ฿Ɇ₲ł₦</string>
    <string name="collection_btn">₥Ɏ ₵ØⱠⱠɆ₵₮łØ₦</string>
    <string name="conductor_btn">₵Ø₦ĐɄ₵₮ØⱤ Ø₣ ₮ⱧɆ ØⱤ₵ⱧɆ₴₮Ɽ₳</string>
    <string name="share_btn">₴Ⱨ₳ⱤɆ ₮ⱧɆ ₥₳Đ₦Ɇ₴₴</string>
    <string name="record_btn">Record</string>
    <string name="stop_btn">Stop</string>
    <string name="save_btn">Save</string>
    <string name="settings">Settings</string>
    <string name="share">₴Ⱨ₳ⱤɆ ₮ⱧɆ ₥₳Đ₦Ɇ₴₴</string>
    <string name="instructions_btn">instructions</string>
    <string name="tutorial">Tutorial</string>
    <string name="ok_btn">ok</string>
    <string name="board_ape_yacht_club_collection">Board ape yacht club collection</string>
    <string name="best_score_so_far_is">Best score so far is:</string>
    <string name="score_target_is_20">score target is 20</string>
    <string name="score_target_is_40">score target is 40</string>
    <string name="score_target_is_60">score target is 60</string>
    <string name="score_target_is_80">score target is 80</string>
    <string name="score_target_is_100">score target is 100</string>
    <string name="score_target_is_150">score target is 150</string>
    <string name="score_target_is_200">score target is 200</string>
    <string name="score_target_is_250">score target is 250</string>
    <string name="score_target_is_300">score target is 300</string>
    <string name="psychosimon_is_a_simple_memory_game">PsychoSimon is a simple memory game!</string>
    <string name="listen_to_what_simon_says_repeat_the_sequence_of_the_lights_in_the_same_order_as_simon">Listen to what Simon says. Repeat the sequence of the lights in the same order as Simon.</string>
    <string name="simon_continues_to_add_a_step_with_each_new_level_you_reach_so_don_t_forget_the_sequence">Simon continues to add a step with each new level you reach so don\'t forget the sequence.</string>
    <string name="you_can_also_record_your_own_sequences_using_the_conductor">You can also record your own sequences using the conductor.</string>
    <string name="try_beating_your_last_highscore_to_win_rewards">Try beating your last highscore to win rewards.</string>
    <string name="Copy_the_button_simon_pressed">Press start and copy the button simon pressed.</string>
    <string name="Good_Job_Simon_will_now_add_another_button">Good Job! Simon will now add another button to the sequnce.</string>
    <string name="you_are_getting_the_point">You\'re getting the hang of it!</string>
    <string name="that_not_what_simon_pressed">That is not what Simon pressed. Try Again.</string>
    <string name="you_lose">you lose</string>
    <string name="nice_job">Nice Job!</string>
    <string name="completed_toturial">Nice! You\'ve completed the tutorial! Hit start to play.</string>
    <string name="Recall_what_Simon_did">Recall what Simon did. Try Again.</string>
    <string name="your_turn">Your Turn</string>
    <string name="simons_turn">Simon\'s Turn</string>
    <string name="current_score">Current Score</string>
    <string name="best_score">Best Score:</string>
    <string name="hit_start_to_begin">Hit Start to Begin</string>
    <string name="start_restart">Start / Restart</string>
    <string name="home">home</string>


</resources>