<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:fillViewport="false">
    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView android:id="@+id/collection_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/board_ape_yacht_club_collection"
                android:textSize="25dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="center"/>

        <TextView android:id="@+id/best_score_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/best_score_so_far_is"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="center"/>
        <EditText android:id="@+id/best_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="center"/>

        <ImageView
                android:id="@+id/monky_level_1"
                android:paddingTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxWidth="200dp"
                android:maxHeight="200dp"
                android:scaleType="fitCenter"
                android:layout_gravity="center"
                android:src="@drawable/question"/>
        <TextView
                android:id="@+id/level1TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_target_is_20"
                android:textSize="25dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="center"/>

        <ImageView
                android:id="@+id/monky_level_2"
                android:paddingTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxWidth="200dp"
                android:maxHeight="200dp"
                android:scaleType="fitCenter"
                android:layout_gravity="center"
                android:src="@drawable/question"/>
        <TextView android:id="@+id/level2TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_target_is_40"
                android:textSize="25dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="center"/>


        <ImageView
                android:id="@+id/monky_level_3"
                android:paddingTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxWidth="200dp"
                android:maxHeight="200dp"
                android:scaleType="fitCenter"
                android:layout_gravity="center"
                android:src="@drawable/question"/>
        <TextView android:id="@+id/level3TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_target_is_60"
                android:textSize="25dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="center"/>

        <ImageView
                android:id="@+id/monky_level_4"
                android:paddingTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxWidth="200dp"
                android:maxHeight="200dp"
                android:scaleType="fitCenter"
                android:layout_gravity="center"
                android:src="@drawable/question"/>
        <TextView android:id="@+id/level4TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_target_is_80"
                android:textSize="25dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="center"/>

        <ImageView
                android:id="@+id/monky_level_5"
                android:paddingTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxWidth="200dp"
                android:maxHeight="200dp"
                android:scaleType="fitCenter"
                android:layout_gravity="center"
                android:src="@drawable/question"/>
        <TextView android:id="@+id/level5TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_target_is_80"
                android:textSize="25dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="center"/>


        <ImageView
                android:id="@+id/monky_level_6"
                android:paddingTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxWidth="200dp"
                android:maxHeight="200dp"
                android:scaleType="fitCenter"
                android:layout_gravity="center"
                android:src="@drawable/question"/>
        <TextView android:id="@+id/level6TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_target_is_100"
                android:textSize="25dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="center"/>

        <ImageView
                android:id="@+id/monky_level_7"
                android:paddingTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxWidth="200dp"
                android:maxHeight="200dp"
                android:scaleType="fitCenter"
                android:layout_gravity="center"
                android:src="@drawable/question"/>
        <TextView android:id="@+id/level7TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_target_is_150"
                android:textSize="25dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="center"/>

        <ImageView
                android:id="@+id/monky_level_8"
                android:paddingTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxWidth="200dp"
                android:maxHeight="200dp"
                android:scaleType="fitCenter"
                android:layout_gravity="center"
                android:src="@drawable/question"/>
        <TextView android:id="@+id/level8TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_target_is_200"
                android:textSize="25dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="center"/>

        <ImageView
                android:id="@+id/monky_level_9"
                android:paddingTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxWidth="200dp"
                android:maxHeight="200dp"
                android:scaleType="fitCenter"
                android:layout_gravity="center"
                android:src="@drawable/question"/>
        <TextView android:id="@+id/level9TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_target_is_250"
                android:textSize="25dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="center"/>

        <ImageView
                android:id="@+id/monky_level_10"
                android:paddingTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxWidth="200dp"
                android:maxHeight="200dp"
                android:scaleType="fitCenter"
                android:layout_gravity="center"
                android:src="@drawable/question"/>
        <TextView android:id="@+id/level10TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_target_is_300"
                android:textSize="25dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="center"/>


    </LinearLayout>
</ScrollView>