<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/black"
        android:layout_above="@+id/bottomBtns"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:gravity="center"
        tools:context=".ConductorActivity">

    <Button
            android:id="@+id/recordBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:text="@string/record_btn"
            android:textColor="@color/white"
            android:textSize="15dp" />

    <Button
            android:id="@+id/stopBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/recordBtn"
            android:text="@string/stop_btn"
            android:textColor="@color/white"
            android:textSize="15dp" />

    <Button
            android:text="Pouse"
            android:layout_toRightOf="@+id/stopBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:id="@+id/pouseBtn"/>

    <Button
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/pouseBtn"
            android:text="@string/save_btn"
            android:textColor="@color/white"
            android:textSize="15dp" />


    <RelativeLayout
            android:id="@+id/centerBtns"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/bottomBtns"
            android:layout_marginBottom="50dp"
            android:gravity="center">


        <ImageView
                android:id="@+id/red_IV"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/red_btn_animation"
                android:gravity="center" />

        <ImageView
                android:id="@+id/green_IV"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_toRightOf="@+id/red_IV"
                android:src="@drawable/green_btn_animation" />


    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/bottomBtns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="180dp"
            android:gravity="center">

        <ImageView
                android:id="@+id/blue_IV"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:src="@drawable/blue_btn_animation" />

        <ImageView
                android:id="@+id/yellow_IV"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_toRightOf="@+id/blue_IV"
                android:src="@drawable/yellow_btn_animation" />


    </RelativeLayout>

</RelativeLayout>

